Kupon olayı bitti
