# controllers/cartController.js
@@ -1,6 +1,12 @@
 import Cart from "../models/cartModel.js";
-import Coupon from "../models/couponModel.js";
 import { StoreProduct } from "../models/storeProductModel.js";
+
+function validateQuantity(product, finalQuantity) {
+  if (product.stock >= finalQuantity && finalQuantity >= 0) {
+    return true;
+  }
+  return false;
+}
 
 export const getCart = async (req, res) => {
   try {
@@ -47,6 +53,17 @@ export const addItemToCart = async (req, res) => {
       (item) => item.product.toString() === productId
     );
 
+    let finalQuantity = quantity;
+    if (itemIndex > -1) {
+      finalQuantity += cart.items[itemIndex].quantity;
+    }
+
+    if (!validateQuantity(product, finalQuantity)) {
+      return res
+        .status(400)
+        .json({ message: "Almak istediğiniz miktarda stok bulunmamaktadır." });
+    }
+
     if (itemIndex > -1) {
       cart.items[itemIndex].quantity += quantity;
     } else {
@@ -58,11 +75,12 @@ export const addItemToCart = async (req, res) => {
     }
 
     const total = cart.items.reduce((acc, item) => {
-      acc + item.price * item.quantity;
+      return acc + item.price * item.quantity;
     }, 0);
     cart.total = total;
-
+    cart.subTotal = total;
     const updatedCart = await cart.save();
+
     res.status(200).json(updatedCart);
   } catch (err) {
     res.status(500).json({ message: err.message });
@@ -73,7 +91,6 @@ export const modifyCartQuantity = async (req, res) => {
   try {
     let { productId, quantity } = req.body;
     const userId = req.user._id;
-
     quantity = Number(quantity);
 
     const product = await StoreProduct.findById(productId);
@@ -86,26 +103,38 @@ export const modifyCartQuantity = async (req, res) => {
     if (!cart) {
       return res
         .status(400)
-        .json({ message: "Kullanıcının herhangi bri sepeti bulunmamaktadır!" });
+        .json({ message: "Kullanıcının herhangi bir sepeti bulunmamaktadır!" });
     }
 
     const itemIndex = cart.items.findIndex(
       (item) => item.product.toString() === productId
     );
 
+    let finalQuantity = quantity;
     if (itemIndex > -1) {
-      if (
-        (cart.items[itemIndex].quantity === 1 && quantity > 0) ||
-        cart.items[itemIndex].quantity > 0
-      ) {
-        cart.items[itemIndex].quantity += quantity;
-      }
+      finalQuantity += cart.items[itemIndex].quantity;
+    }
+
+    if (!validateQuantity(product, finalQuantity)) {
+      return res
+        .status(400)
+        .json({ message: "Almak istediğiniz miktarda stok bulunmamaktadır." });
+    }
+
+    if (itemIndex > -1) {
+      cart.items[itemIndex].quantity += quantity;
     } else {
       return res
         .status(404)
         .json({ message: "Sepetinizde böyle bir ürün bulunmamaktadır" });
     }
 
+    const total = cart.items.reduce((acc, item) => {
+      return acc + item.price * item.quantity;
+    }, 0);
+
+    cart.total = total;
+    cart.subTotal = total;
     const updatedCart = await cart.save();
 
     res.status(200).json({
@@ -134,69 +163,6 @@ export const removeItemFromCart = async (req, res) => {
 
     await cart.save();
     res.status(200).json({ message: "Ürün sepetten kaldırıldı", cart });
-  } catch (err) {
-    res.status(500).json({ message: err.message });
-  }
-};
-
-export const applyCoupon = async (req, res) => {
-  try {
-    const { couponCode } = req.body;
-    const userId = req.user._id;
-
-    const coupon = await Coupon.findOne({ code: couponCode.toUpperCase() });
-    const cart = await Cart.findOne({ user: userId });
-
-    if (!cart || cart.items.length === 0) {
-      return res.status(400).json({
-        message: "Kupon uygulamak için sepetiniz boş olmaması gerekiyor.",
-      });
-    }
-
-    if (!coupon) {
-      return res.status(404).json({ message: "Geçersiz kupon kodu" });
-    } else if (!coupon.isActive) {
-      return res.status(400).json({ message: "Bu kupon artık aktif değil." });
-    } else if (!coupon.expiryDate < new Date()) {
-      return res.status(400).json({ message: "Bu kuponun süresi dolmuş" });
-    } else if (coupon.timesUsed >= coupon.usageLimit) {
-      return res
-        .status(400)
-        .json({ message: "Bu kupon kullanım limitine ulaşmıştır" });
-    } else if (
-      coupon.targetUsers &&
-      coupon.targetUsers.length > 0 &&
-      !coupon.targetUsers.map((id) => id.toString()).includes(userId.toString())
-    ) {
-      return res.status(403).json({ message: "Bu kupon size özel değildir!" });
-    }
-
-    const subTotal = cart.items.reduce(
-      (acc, item) => acc + item.quantity * item.price,
-      0
-    );
-
-    if (subTotal < coupon.minPurchaseAmount) {
-      return res.status(400).json({
-        message: `Bu kuponu kullanmak için minimum sepet tutarı: ${coupon.minPurchaseAmount} TL olmalıdır`,
-      });
-    }
-
-    let discount = 0;
-    if (coupon.discountType === "percentage") {
-      discount = (subTotal * coupon.discountValue) / 100;
-    } else if (coupon.discountType === "fixedAmount") {
-      discount = coupon.discountValue;
-    }
-
-    const total = Math.max(0, subTotal - discount);
-
-    cart.subTotal = subTotal;
-    cart.total = total;
-    cart.appliedCoupon = coupon.code;
-    await cart.save();
-
-    res.status(200).json({ message: `Kupon başarıyla uygulandı!`, data: cart });
   } catch (err) {
     res.status(500).json({ message: err.message });
   }
